// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Student Dashboard displays as loading 1`] = `
.c0 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

<div
  className="student-dashboard"
>
  <div
    className="openstax-notifications-bar"
  />
  <div
    className="course-title-banner"
    data-appearance="testing"
    data-book-title="Testing"
    data-is-preview={false}
    data-term="Spring 2017"
    data-title="Local Test Course One"
  >
    <div
      className="book-title"
    >
      <h1
        className="book-title-text"
      >
        Local Test Course One
      </h1>
    </div>
    <div
      className="course-term"
    >
      Spring 2017
    </div>
  </div>
  <div
    className="container"
    data-tour-region-id="student-dashboard"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-9 col-md-8 col-12"
      >
        <nav
          className="tutor-tabs"
        >
          <ul
            className="nav nav-tabs"
            role="tablist"
          >
            <li
              aria-selected={true}
              className="active"
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  This Week
                </h2>
              </a>
            </li>
            <li
              aria-selected={false}
              className=""
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  All Past Work
                </h2>
              </a>
            </li>
          </ul>
        </nav>
        <div
          className="tab-pane active"
          role="tabpanel"
        >
          <div
            className="empty pending card"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-spinner fa-w-16 fa-spin ox-icon ox-icon-spinner c0"
              data-icon="spinner"
              data-prefix="fas"
              data-variant="activity"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
             Preparing assignments for your course.  This can take up to 10 minutes.
          </div>
          <div
            className="empty pending upcoming card"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-spinner fa-w-16 fa-spin ox-icon ox-icon-spinner c0"
              data-icon="spinner"
              data-prefix="fas"
              data-variant="activity"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
             Preparing assignments for your course.  This can take up to 10 minutes.
          </div>
        </div>
      </div>
      <div
        className="sidebar col-lg-3 col-md-4 col-12"
      >
        <div
          className="actions-box loadable is-loading"
        >
          Loading progress information...
        </div>
        <div
          className="actions-box browse-the-book card"
        >
          <a
            aria-label="Browse course reference book"
            className="browse-the-book"
            data-appearance="testing"
            href="/book/1"
            onClick={[Function]}
            target="_blank"
          >
            <div>
              Browse the Book
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Student Dashboard matches snapshot 1`] = `
.c3 {
  margin-right: 0.5rem;
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  font-size: 1.2rem;
  margin-top: 5px;
  color: #6f6f6f;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 1rem 0;
}

.c2 span + span {
  margin-left: 2rem;
}

<div
  className="student-dashboard"
>
  <div
    className="openstax-notifications-bar"
  />
  <div
    className="course-title-banner"
    data-appearance="testing"
    data-book-title="Testing"
    data-is-preview={false}
    data-term="Spring 2017"
    data-title="Local Test Course One"
  >
    <div
      className="book-title"
    >
      <h1
        className="book-title-text"
      >
        Local Test Course One
      </h1>
    </div>
    <div
      className="course-term"
    >
      Spring 2017
    </div>
  </div>
  <div
    className="container"
    data-tour-region-id="student-dashboard"
  >
    <div
      className="row"
    >
      <div
        className="col-lg-9 col-md-8 col-12"
      >
        <nav
          className="tutor-tabs"
        >
          <ul
            className="nav nav-tabs"
            role="tablist"
          >
            <li
              aria-selected={true}
              className="active"
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  This Week
                </h2>
              </a>
            </li>
            <li
              aria-selected={false}
              className=""
              role="tab"
            >
              <a
                href="#"
                onClick={[Function]}
              >
                <h2>
                  All Past Work
                </h2>
              </a>
            </li>
          </ul>
        </nav>
        <div
          className="tab-pane active"
          role="tabpanel"
        >
          <div
            className="-this-week card"
          >
            <div
              className="row labels"
            >
              <div
                className="col-sm-6 col-12"
              >
                <span
                  className="date-range"
                >
                  <time>
                    Oct 12, 2015
                  </time>
                  <span>
                    –
                  </span>
                  <time>
                    Oct 18, 2015
                  </time>
                </span>
              </div>
              <div
                className="due-at-label col-sm-3 col-5 offset-sm-0 offset-2"
              >
                Due
              </div>
              <div
                className="progress-label col-sm-3 col-5"
              >
                Progress
              </div>
            </div>
            <a
              aria-label="Work on reading: revolutionary synthesize models"
              className="task row reading"
              data-event-id={1}
              href="/course/1/task/1"
              onClick={[Function]}
              tabIndex={-1}
            >
              <div
                className="column-icon col-sm-1 col-2"
              >
                <i
                  aria-label="reading icon"
                  className="icon icon-lg icon-reading"
                />
              </div>
              <div
                className="title col-sm-5 col-10"
              >
                revolutionary synthesize models
              </div>
              <div
                className="due-at col-sm-3 col-5"
              >
                <time>
                  Su Oct 18, 7:00am
                </time>
              </div>
              <div
                className="feedback col-sm-3 col-5"
              >
                <div
                  className="c0"
                >
                  <span
                    className="tour-anchor"
                    data-tour-anchor-id="assignment-progress-status"
                  >
                    Not started
                  </span>
                </div>
              </div>
            </a>
            <a
              aria-label="Work on external: cutting-edge target models"
              className="task row external"
              data-event-id={2}
              href="/course/1/task/2"
              onClick={[Function]}
              tabIndex={-1}
            >
              <div
                className="column-icon col-sm-1 col-2"
              >
                <i
                  aria-label="external icon"
                  className="icon icon-lg icon-external"
                />
              </div>
              <div
                className="title col-sm-5 col-10"
              >
                cutting-edge target models
              </div>
              <div
                className="due-at col-sm-3 col-5"
              >
                <time>
                  Su Oct 18, 7:00am
                </time>
              </div>
              <div
                className="feedback col-sm-3 col-5"
              >
                <div
                  className="c0"
                >
                  <span
                    className="tour-anchor"
                    data-tour-anchor-id="assignment-progress-status"
                  >
                    Not started
                  </span>
                </div>
              </div>
            </a>
            <a
              aria-label="Work on event: killer monetize systems"
              className="task row event"
              data-event-id={3}
              href="/course/1/task/3"
              onClick={[Function]}
              tabIndex={-1}
            >
              <div
                className="column-icon col-sm-1 col-2"
              >
                <i
                  aria-label="event icon"
                  className="icon icon-lg icon-event"
                />
              </div>
              <div
                className="title col-sm-5 col-10"
              >
                killer monetize systems
              </div>
              <div
                className="due-at col-sm-3 col-5"
              >
                <time>
                  Su Oct 18, 7:00am
                </time>
              </div>
              <div
                className="feedback col-sm-3 col-5"
              >
                <div
                  className="c0"
                >
                  
                </div>
              </div>
            </a>
            <a
              aria-label="Work on homework: B2C recontextualize e-commerce"
              className="task row homework"
              data-event-id={4}
              href="/course/1/task/4"
              onClick={[Function]}
              tabIndex={-1}
            >
              <div
                className="column-icon col-sm-1 col-2"
              >
                <i
                  aria-label="homework icon"
                  className="icon icon-lg icon-homework"
                />
              </div>
              <div
                className="title col-sm-5 col-10"
              >
                B2C recontextualize e-commerce
              </div>
              <div
                className="due-at col-sm-3 col-5"
              >
                <time>
                  Su Oct 18, 7:00am
                </time>
              </div>
              <div
                className="feedback col-sm-3 col-5"
              >
                <div
                  className="c0"
                >
                  <span
                    className="tour-anchor"
                    data-tour-anchor-id="assignment-progress-status"
                  >
                    Not started
                  </span>
                </div>
                <div
                  className="c1"
                >
                  0
                  /
                  3
                   answered on due date
                </div>
              </div>
            </a>
          </div>
          <div
            className="c2"
          >
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-exclamation-circle fa-w-16 ox-icon ox-icon-exclamation-circle c3"
                color="#f4d019"
                data-icon="exclamation-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
               Due soon
            </span>
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-clock fa-w-16 ox-icon ox-icon-clock c3"
                color="#c2002f"
                data-icon="clock"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
               Late
            </span>
            <span>
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-clock fa-w-16 ox-icon ox-icon-clock c3"
                color="#6f6f6f"
                data-icon="clock"
                data-prefix="far"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
               Late but accepted
            </span>
          </div>
          <div
            className="empty upcoming card"
          >
            No upcoming assignments
          </div>
        </div>
      </div>
      <div
        className="sidebar col-lg-3 col-md-4 col-12"
      >
        <div
          className="actions-box loadable is-loading"
        >
          Loading progress information...
        </div>
        <div
          className="actions-box browse-the-book card"
        >
          <a
            aria-label="Browse course reference book"
            className="browse-the-book"
            data-appearance="testing"
            href="/book/1"
            onClick={[Function]}
            target="_blank"
          >
            <div>
              Browse the Book
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
